--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: npm install
+      run: |
+        cd apps/dashboard 
+        npm install
     - name: Build with Maven
       run: mvn clean install
 
